feat(ignite): integrate with apache ignite