@@ -13,6 +13,10 @@ group = "inc.evil"
 version = "0.0.1-SNAPSHOT"
 java.sourceCompatibility = JavaVersion.VERSION_17
 
+//    By default, Spring pulls in a version of H2 that is not supported by Ignite,
+//    So we pin appropriate H2 version explicitly
+ext["h2.version"] = "1.4.197"
+
 repositories {
     mavenCentral()
     maven {
@@ -28,6 +32,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-webflux")
     implementation("org.springframework.boot:spring-boot-starter-graphql")
+    implementation("org.springframework.boot:spring-boot-starter-hateoas")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
@@ -35,8 +40,15 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation("com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.0")
     implementation("org.apache.commons:commons-lang3:3.12.0")
-    implementation("com.hazelcast:hazelcast:5.2.1")
-    implementation("com.hazelcast:hazelcast-spring:5.2.1")
+    implementation("org.springframework.data:spring-data-commons:2.7.3")
+
+    // Apache Ignite
+    implementation("org.apache.ignite:ignite-kubernetes:2.15.0")
+    implementation("org.apache.ignite:ignite-indexing:2.15.0")
+    implementation("org.apache.ignite:ignite-core:2.15.0")
+    implementation("org.apache.ignite:ignite-spring:2.15.0")
+    implementation("org.apache.ignite:ignite-spring-data-ext:2.0.0")
+    implementation("org.apache.ignite:ignite-rest-http:2.15.0")
 
     implementation("org.apache.avro:avro:1.11.0") {
         exclude("org.slf4j")
@@ -57,6 +69,9 @@ dependencies {
         exclude("org.slf4j")
     }
 
+//    By default, Spring pulls in a version of H2 that is not supported by Ignite,
+//    So we pin appropriate H2 version explicitly
+    runtimeOnly("com.h2database:h2:1.4.197")
     runtimeOnly("org.postgresql:postgresql")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
@@ -82,6 +97,25 @@ tasks.withType<KotlinCompile> {
 }
 
 tasks.withType<Test> {
+    jvmArgs =
+        listOf(
+            "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+            "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+            "--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "-Xms512m",
+            "-Xmx2g",
+            "-XX:MaxDirectMemorySize=256m",
+            "-DIGNITE_JETTY_PORT=8888"
+        )
     useJUnitPlatform()
 }
 
